# larcorealg

./: CMakeLists.txt
cmakeConfig/: CMakeLists.txt  larcorealg-fragment.cmake.in
larcorealg/CoreUtils/: CMakeLists.txt  RealComparisons.h  SortByPointers.h  StdUtils.h  fromFutureImport.cxx  fromFutureImport.h
larcorealg/GeoAlgo/: CMakeLists.txt
larcorealg/Geometry/: AuxDetGeo.cxx  AuxDetSensitiveGeo.cxx  CMakeLists.txt  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  CryostatGeo.cxx  CryostatGeo.h  Decomposer.h  GeoElementTraits.h  GeoMetadataParser.cxx  GeoMetadataParser.h  GeoNodePath.cxx  GeoNodePath.h  GeoObjectSorterNull.h  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  GeometryBuilder.h  GeometryBuilderStandard.cxx  GeometryBuilderStandard.h  GeometryBuilderWireless.cxx  GeometryBuilderWireless.h  GeometryCore.cxx  GeometryCore.h  GeometryDataContainers.h  LocalTransformation.h  PlaneGeo.cxx  PlaneGeo.h  SenseWireGeo.cxx  SenseWireGeo.h  TPCGeo.cxx  TPCGeo.h  TenseWireGeo.cxx  TenseWireGeo.h  WireGeo.cxx  WireGeo.h  WirePlaneGeo.cxx  WirePlaneGeo.h  geo_vectors_parse.h  geo_vectors_utils.h
larcorealg/Geometry/PixelPlane/: CMakeLists.txt  ChannelMapPixelAlg.cxx  ChannelMapPixelAlg.h  GeometryBuilderSquarePixel.cxx  GeometryBuilderSquarePixel.h  GeometryPixel.dox  PixelCoord.h  PixelPlaneGeo.cxx  PixelPlaneGeo.h  PixelPlaneGeoBase.cxx  PixelPlaneGeoBase.h  PixelPlaneGeoInterface.cxx  PixelPlaneGeoInterface.h
larcorealg/Geometry/gdml/: CMakeLists.txt
larcorealg/Geometry/gdml/GDMLSchema/: CMakeLists.txt
larcorealg/TestUtils/: CMakeLists.txt
test/CoreUtils/: CMakeLists.txt  RealComparisons_test.cc  fromFutureImport_test.cc
test/Geometry/: CMakeLists.txt  Decomposer_test.cxx  GeometryIteratorLoopTestAlg.cxx  GeometryIteratorTestAlg.cxx  GeometryTestAlg.cxx  GeometryTestAlg.h  geo_vectors_parse_test.cc  geo_vectors_utils_test.cc  geometrydatacontainers_test.cxx
test/TestUtils/: CMakeLists.txt
ups/: product_deps  setup_for_development
